# ssh-desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: node.yml  rust.yml
crates/sshx/: Cargo.toml
crates/sshx/src/: lib.rs  main.rs  runner.rs  status_display.rs  xpra.rs  xpra_config.rs  xpra_log_analyzer.rs  xpra_log_rotation.rs  xpra_logger.rs  xpra_metrics.rs  xpra_monitor.rs  xpra_pool.rs  xpra_runner.rs  xpra_status.rs  xpra_visualizer.rs
docs/: ssh-desktop.md
