[package]
name = "sshx"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes = "0.8.3"
ansi_term = "0.12.1"
anyhow.workspace = true
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
cfg-if = "1.0.0"
clap.workspace = true
ctr = "0.9.2"
encoding_rs = "0.8.31"
futures-util = "0.3"
pin-project = "1.1.3"
sshx-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = "0.20"
tonic.workspace = true
tracing.workspace = true
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
tabled = "0.14"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
flate2 = "1.0"
terminal-charts = "0.5"
=======
=======
=======
=======
=======
=======
tracing-subscriber.workspace = true
whoami = { version = "1.5.1", default-features = false }

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
